Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-06-11 (SVN):
    * engine/h2shared/common.c: Used the IS_DIR_SEPARATOR() macro in
      COM_SkipPath(). Changed the COM_FileBase() helper to simply do
      COM_StripExtension(COM_SkipPath(in),out,outsize).
    * engine, cl_parse.c (CL_ParseServerInfo): When copying the naked
      map file name to cl.mapname, changed it to use COM_FileBase().

2012-06-11 (SVN):
    * utils, hcc.c: If -src is specified, add a trailing slash only if
      there isn't a trailing directory separator already.

2012-06-10 (SVN):
    * engine/h2shared/common.c (COM_StripExtension,COM_FileGetExtension,
      COM_DefaultExtension): Changed to use filename.h macros.
    * utils/common/pathutil.c, qdir.c: Likewise.
    * utils/maputils/qbsp.c: Likewise.
    * utils/texutils/bsp2wal/bsp2wal.c: Likewise.
    * utils/common/util_io.c (Q_getwd, _AMIGA): Likewise. Make sure that
      the resulting path has a trailing directory separator.

2012-06-10 (SVN):
    * libs/common: Added filenames.h with several macros and inlines to
      address pathname handling differences between different operating
      systems.
    * libs/timidity/timidity.c (mid_init): Include directory separator
      character when adding the path of the config file to the pathlist.
      Use the filename.h macros.
    * libs/timidity/common.c (open_file): Use the filename.h macros.
    * engine/h2shared/snd_timidity.c, snd_wildmidi.c (_InitHelper): Use
      the filename.h macros.

2012-06-05 (SVN):
    * sys_amiga.c (Sys_CopyFile): Replace FRead() and FWrite() calls by
      Read() and Write(). Check the success of ExamineFH().

2012-06-05 (SVN):
    * sys_amiga.c, sys_dos.c, sys_unix.c (Sys_CopyFile): Fixed flipped
      string args in error messages (ugh...)

2012-06-05 (SVN):
    * util_io.c (AMIGA, Q_mkdir): Fixed to return if we got a pointer.

2012-06-05 (SVN):
    * hwmaster/sys_amiga.c: Added missing timer initialization stuff, so